export class WebsiteVerifier {
  constructor() {}

  public verify(website: string): boolean {
    return true;
  }
}
