@startuml ankh-uml
title UML

class IdManager
{
  -id
  +UniqueIdentifier generateId()
}

class WebsiteVerifier
{
  +boolean verify()
}

class AddressService
{
  -zipCityMap
  +string getCityByZip()
}

class Address
{
  -address
  +IAddress getAddress()
}

class User
{
  -id
  -email
  -username
  -address
  -website
  -websiteVerifier
  +string getUser()
  -boolean verifyEmail()
}


Address --> AddressService
User --> IdManager
User --> WebsiteVerifier
User --> Address

@enduml